feat: changed query to get all non-blocked users for creating channel.
Refs: #19.